infra/argo/applications/gateway/templates/api_gateway.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: api-gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  # we need to use the global one to make sure IaP works. 
  gatewayClassName: gke-l7-global-external-managed	
  listeners:
  - name: https
    hostname: "*.api.dev.everycure.org"
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: api-gateway-cert
          kind: Secret
  - name: http
    hostname: "*.api.dev.everycure.org"
    protocol: HTTP
    port: 80
---
apiVersion: v1
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: redirect
spec:
  parentRefs:
    name: external-http
    sectionName: http
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
